--- a/data/results_by_model.tex
+++ b/data/results_by_model.tex
@@ -3,13 +3,14 @@
 {} &  mean\_test\_r2 &  mean\_test\_explained\_variance &  mean\_test\_max\_error &  std\_test\_r2 &  std\_test\_explained\_variance &  std\_test\_max\_error \\
 param\_classifier      &               &                               &                      &              &                              &                     \\
 \midrule
-DecisionTreeRegressor &         94.25 &                         94.34 &                -5.61 &         7.90 &                         7.71 &                3.86 \\
-LinearRegression      &         76.38 &                         76.69 &                -6.52 &         9.58 &                         9.32 &                1.39 \\
-LassoCV               &         76.35 &                         76.66 &                -6.46 &        12.16 &                        11.68 &                2.16 \\
-RidgeCV               &         76.33 &                         76.65 &                -6.38 &         9.81 &                         9.52 &                1.56 \\
-LassoLarsCV           &         76.22 &                         76.53 &                -6.49 &         9.61 &                         9.35 &                1.37 \\
-Ridge                 &         75.09 &                         75.44 &                -6.41 &        13.13 &                        12.46 &                2.31 \\
-LassoLars             &         37.45 &                         43.68 &               -10.03 &        41.92 &                        15.96 &                2.13 \\
-Lasso                 &         37.44 &                         43.67 &                -9.97 &        41.93 &                        15.97 &                2.14 \\
+ExtraTreesRegressor   &         91.94 &                         92.19 &                -3.24 &        14.37 &                        12.97 &                2.15 \\
+DecisionTreeRegressor &         88.47 &                         88.85 &                -4.82 &        37.22 &                        36.91 &                3.50 \\
+Ridge                 &          9.43 &                         12.31 &                -7.05 &       131.13 &                       128.83 &                2.74 \\
+LassoCV               &          7.79 &                         10.14 &                -7.38 &       136.09 &                       133.67 &                2.78 \\
+LassoLarsCV           &          7.37 &                          9.86 &                -7.37 &       132.40 &                       127.24 &                2.93 \\
+RidgeCV               &          4.89 &                          8.09 &                -7.35 &       132.77 &                       128.32 &                2.90 \\
+LinearRegression      &          4.66 &                          8.40 &                -7.37 &       131.68 &                       126.18 &                2.94 \\
+LassoLars             &        -50.82 &                         -0.00 &                -7.45 &       751.50 &                       102.84 &                1.82 \\
+Lasso                 &       -122.31 &                         -0.00 &                -7.45 &       232.82 &                        77.58 &                1.74 \\
 \bottomrule
 \end{tabular}
