--- a/data/results_by_model.tex
+++ b/data/results_by_model.tex
@@ -1,16 +1,16 @@
 \begin{tabular}{lrrrrrr}
 \toprule
-{} &  mean\_test\_r2 &  mean\_test\_explained\_variance &  mean\_test\_max\_error &  std\_test\_r2 &  std\_test\_explained\_variance &  std\_test\_max\_error \\
-param\_classifier      &               &                               &                      &              &                              &                     \\
+ & mean_test_r2 & mean_test_explained_variance & mean_test_max_error & std_test_r2 & std_test_explained_variance & std_test_max_error \\
+param_classifier &  &  &  &  &  &  \\
 \midrule
-ExtraTreesRegressor   &         91.94 &                         92.19 &                -3.24 &        14.37 &                        12.97 &                2.15 \\
-DecisionTreeRegressor &         88.47 &                         88.85 &                -4.82 &        37.22 &                        36.91 &                3.50 \\
-Ridge                 &          9.43 &                         12.31 &                -7.05 &       131.13 &                       128.83 &                2.74 \\
-LassoCV               &          7.79 &                         10.14 &                -7.38 &       136.09 &                       133.67 &                2.78 \\
-LassoLarsCV           &          7.37 &                          9.86 &                -7.37 &       132.40 &                       127.24 &                2.93 \\
-RidgeCV               &          4.89 &                          8.09 &                -7.35 &       132.77 &                       128.32 &                2.90 \\
-LinearRegression      &          4.66 &                          8.40 &                -7.37 &       131.68 &                       126.18 &                2.94 \\
-LassoLars             &        -50.82 &                         -0.00 &                -7.45 &       751.50 &                       102.84 &                1.82 \\
-Lasso                 &       -122.31 &                         -0.00 &                -7.45 &       233.03 &                        77.59 &                1.74 \\
+ExtraTreesRegressor & 91.94 & 92.19 & -3.24 & 14.37 & 12.97 & 2.15 \\
+DecisionTreeRegressor & 88.47 & 88.85 & -4.82 & 14.30 & 14.15 & 3.50 \\
+Ridge & 9.43 & 12.31 & -7.05 & 131.13 & 128.83 & 2.74 \\
+LassoCV & 7.79 & 10.14 & -7.38 & 136.09 & 133.67 & 2.78 \\
+LassoLarsCV & 7.41 & 9.79 & -7.38 & 137.90 & 135.15 & 2.85 \\
+RidgeCV & 4.89 & 8.09 & -7.35 & 132.77 & 128.32 & 2.90 \\
+LinearRegression & 4.66 & 8.40 & -7.37 & 131.68 & 126.18 & 2.94 \\
+LassoLars & -50.82 & 0.51 & -7.38 & 751.50 & 102.84 & 1.82 \\
+Lasso & -122.31 & -0.00 & -7.45 & 232.82 & 77.58 & 1.74 \\
 \bottomrule
 \end{tabular}
